# meetgraph

./: .gitignore  LICENSE.md  README.md  meetgraph-20260625-1507.ttl  meetgraph-20260626-1505.jsonld  pyproject.toml  requirements.txt  run.sh
.github/workflows/: publish.yml
Formula/: meeting-transcriber.rb
meeting_transcriber/: __init__.py  __main__.py  agent.py  audio.py  auth.py  cli.py  controller.py  crosslink.py  delivery.py  diarize.py  email_send.py  external.py  kg.py  pubmed.py  storage.py  team.py  transcribe.py  transcript.py  ui.py  wikipedia.py
meeting_transcriber/skills/: SKILL.md
meeting_transcriber/skills/connecting/: claude-code.md
meeting_transcriber/skills/examples/: example.md
meeting_transcriber/skills/prompts/: action-items.md  structured-json.md  summary-full.md
meeting_transcriber/skills/schemas/: mco.yaml  meeting-summary.schema.json
meeting_transcriber/skills/scripts/: clean_transcript.py
