[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meetgraph"
# Version is derived from the git tag by setuptools-scm (see [tool.setuptools_scm]).
# Release by tagging, e.g. `git tag v0.1.2 && git push origin v0.1.2` — no edits here.
dynamic = ["version"]
description = "MeetGraph — turning meetings into a knowledge graph: record, transcribe live, and generate structured AI notes."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "Tek Raj Chhetri", email = "tekraj@mit.edu" }]
keywords = ["transcription", "whisper", "meeting", "notes", "knowledge-graph", "pydantic-ai", "audio"]

dependencies = [
    "PyQt6>=6.6",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "soxr>=0.3.7",
    "faster-whisper>=1.0.0",
    "mlx-whisper>=0.4; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "openai>=1.30",
    "pydantic-ai-slim[anthropic,openai]>=2.0",
    "pyoxigraph>=0.4",
    "SQLAlchemy>=2.0",
]

[project.scripts]
meetgraph = "meeting_transcriber.cli:main"

[project.urls]
Homepage = "https://github.com/tekrajchhetri/meetgraph"

[tool.setuptools_scm]
# Version is derived from the latest `v*` git tag at build time. No options
# needed; the installed version is then available via importlib.metadata.

[tool.setuptools.packages.find]
include = ["meeting_transcriber*"]

[tool.setuptools.package-data]
# Ship the logo and the bundled meeting-notes skill (schema, prompts, cleaner).
"meeting_transcriber" = [
    "assets/*",
    "skills/*",
    "skills/**/*",
]
